[package]
name = "dns-update-digital-ocean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digitalocean = "0.1.1"
log = "0.4.22"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
